--- a/index.html
+++ b/index.html
@@ -42,14 +42,54 @@
                 <div class="col-12 col-md-6 d-flex align-items-center">
                     <div class="d-flex d-sm-block flex-column align-items-center text-md-start text-center">
                         <h1 class="">Navigating the <br> digital landscape <br> for success</h1>
-                        <p class="w-sm-75">Our digital marketing agency helps businesses grow and succeed online through a
+                        <p class="w-sm-75">Our digital marketing agency helps businesses grow and succeed online through
+                            a
                             range of services
                             including SEO, PPC, social media marketing, and content creation.</p>
                         <button class="primary-btn">Book a consultation</button>
                     </div>
                 </div>
-                <div class="col-md-6 col-12 d-flex justify-content-end align-items-start">
+                <div class="col-md-6 col-12 d-flex justify-content-sm-end align-items-start">
                     <img class="hero-img" src="./assets/Hero.svg" alt="Hero">
+                </div>
+            </section>
+            <div class="branding mt-4 mt-lg-2">
+                <div class="branding-wrapper row row-cols-3 row-cols-lg-6 row-gap-3">
+                    <div class="col d-flex justify-content-center">
+                        <img src="./assets/companieslogo/Company logo.png" alt="">
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="./assets/companieslogo/Company logo (1).png" alt="">
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="./assets/companieslogo/Company logo (2).png" alt="">
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="./assets/companieslogo/Company logo (3).png" alt="">
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="./assets/companieslogo/Company logo (4).png" alt="">
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="./assets/companieslogo/Company logo (5).png" alt="">
+                    </div>
+                </div>
+            </div>
+            <section class="services">
+                <div class="">
+                    <h2 class="primary-heading">Services</h2>
+                    <p>At our digital marketing agency, we offer a range of services to help businesses grow and succeed
+                        online. These services include:</p>
+                </div>
+                <div>
+                    <div>
+                        <h3>Search Engine Optimization</h3>
+                        <img src="" alt="">
+                        <a href="" class="">
+                            <i></i>
+                            <span>Learn more</span>
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
