--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- bootstrap css-->
     <link rel="stylesheet" href="./bootstrap.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.min.css" rel="stylesheet" />
 </head>
 
 
@@ -76,19 +80,101 @@
                 </div>
             </div>
             <section class="services">
-                <div class="">
-                    <h2 class="primary-heading">Services</h2>
-                    <p>At our digital marketing agency, we offer a range of services to help businesses grow and succeed
+                <div class="d-flex align-items-center gap-4 flex-column flex-md-row my-5">
+                    <h2 class="primary-heading px-4 py-2 px-md-2  rounded shadow-lg">Services</h2>
+                    <p class="w-md-50 text-center text-md-start">At our digital marketing agency, we offer a range of
+                        services
+                        to help businesses grow and succeed
                         online. These services include:</p>
                 </div>
+                <div class="services-row">
+                    <div class="service-cols">
+                        <div class="service-cols-inner">
+                            <div class="d-flex flex-column align-items-start">
+                                <h3 class="p-1 px-2 m-0">Search Engine</h3>
+                                <h3 class="p-1 px-2 m-0">optimization</h3>
+                            </div>
+                            <img src="./assets/servicesImg/bicycle.svg" alt="">
+                            <a href="">
+                                <i class="fa-solid fa-arrow-right"></i>
+                                <span>Learn more</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="service-cols">
+                        <div class="service-cols-inner">
+                            <div class="d-flex flex-column align-items-start">
+                                <h3 class="bg-white p-1 px-2 m-0">Pay-per-click </h3>
+                                <h3 class="bg-white p-1 px-2 m-0">adversting</h3>
+                            </div>
+                            <img src="./assets/servicesImg/box2.svg" alt="">
+                            <a href="">
+                                <i class="fa-solid fa-arrow-right"></i>
+                                <span>Learn more</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="process mb-5">
+                <div class="d-flex align-items-center gap-4 flex-column flex-md-row my-5">
+                    <h2 class="primary-heading px-4 py-2 px-md-2  rounded shadow-lg">Our Working Process</h2>
+                    <p class="w-md-50 text-center text-md-start">Step-by-Step Guide to Achieving Your Business Goals</p>
+                </div>
                 <div>
-                    <div>
-                        <h3>Search Engine Optimization</h3>
-                        <img src="" alt="">
-                        <a href="" class="">
-                            <i></i>
-                            <span>Learn more</span>
-                        </a>
+                    <div class="accordion accordion-borderless" id="accordionFlushExampleX">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header border border-2 rounded-5 border-black" id="flush-headingOneX">
+                                <button data-mdb-collapse-init class="accordion-button" type="button"
+                                    data-mdb-target="#flush-collapseOneX" aria-expanded="true"
+                                    aria-controls="flush-collapseOneX">
+                                    Consultation
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOneX" class="accordion-collapse collapse show"
+                                aria-labelledby="flush-headingOneX" data-mdb-parent="#accordionFlushExampleX">
+                                <div class="accordion-body">
+                                    Placeholder content for this accordion, which is intended to demonstrate the
+                                    <code>.accordion-flush</code> class. This is the first item's accordion body.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingTwoX">
+                                <button data-mdb-collapse-init class="accordion-button collapsed" type="button"
+                                    data-mdb-target="#flush-collapseTwoX" aria-expanded="false"
+                                    aria-controls="flush-collapseTwoX">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwoX" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingTwoX" data-mdb-parent="#accordionFlushExampleX">
+                                <div class="accordion-body">
+                                    Placeholder content for this accordion, which is intended to demonstrate the
+                                    <code>.accordion-flush</code> class. This is the second item's accordion body.
+                                    Let's imagine this being filled with some actual content.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingThreeX">
+                                <button data-mdb-collapse-init class="accordion-button collapsed" type="button"
+                                    data-mdb-target="#flush-collapseThreeX" aria-expanded="false"
+                                    aria-controls="flush-collapseThreeX">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThreeX" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingThreeX" data-mdb-parent="#accordionFlushExampleX">
+                                <div class="accordion-body">
+                                    Placeholder content for this accordion, which is intended to demonstrate the
+                                    <code>.accordion-flush</code> class. This is the third item's accordion body.
+                                    Nothing more exciting happening here in terms of content, but just filling up
+                                    the space to make it look, at least at first glance, a bit more representative
+                                    of how this would look in a real-world application.
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -96,6 +182,9 @@
     </main>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- MDB -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.umd.min.js"></script>
 </body>
 
 </html>
