--- a/index.html
+++ b/index.html
@@ -257,55 +257,58 @@
           </div>
         </div>
       </section>
-      <footer>
-        <div class="d-flex flex-column gap-5">
-          <div class="d-flex justify-content-between">
-            <div>
-              <img src="./assets/footerLogo.png" alt="">
-            </div>
-            <div class="d-flex gap-3">
-              <a href="">About us</a>
-              <a href="">Services</a>
-              <a href="">Use Cases</a>
-              <a href="">Pricing</a>
-              <a href="">Blog</a>
-            </div>
-            <div class="d-flex gap-3 align-items-center">
-              <a href=""><i class="fab fa-linkedin"></i></a>
-              <a href=""><i class="fab fa-facebook"></i></a>
-              <a href=""><i class="fab fa-twitter"></i></a>
-            </div>
+    </div>
+    <footer>
+      <div class="mt-3 d-flex flex-column gap-5">
+        <div class="gap-4 d-flex justify-content-sm-between flex-column flex-md-row align-items-center">
+          <div>
+            <img src="./assets/footerLogo.png" alt="">
           </div>
-          <div class="footer-contact">
-            <div class="">
-              <div class="heading">Contact Us</div>
-              <div>
-                <div>
-                  <span>Email:</span>
-                  <a href="mailto:" class="text-decoration-none">info@positivus.com</a>
-                </div>
-                <div class="my-2">
-                  <span>Phone:</span><a href="tel:+" class="text-decoration-none">555-567-8901</a>
-                </div>
-                <div>
-                  <span>Address: </span>
-                  <address>1234 Main St
-                    Moonstone City, Stardust State 12345</address>
-                </div>
-              </div>
-            </div>
-            <div class="footer-form">
-              <input type="email" placeholder="Email" name="" id="">
-              <button>Subscribe to news</button>
-            </div>
+          <div class="d-flex flex-column text-center flex-sm-row gap-3">
+            <a href="" class="fs-5">About us</a>
+            <a href="" class="fs-5">Services</a>
+            <a href="" class="fs-5">Use Cases</a>
+            <a href="" class="fs-5">Pricing</a>
+            <a href="" class="fs-5">Blog</a>
           </div>
-          <div class="d-flex gap-3">
-            <div>© 2023 Positivus. All Rights Reserved.</div>
-            <a href="">Privacy Policy</a>
+          <div class="d-flex gap-3 align-items-center">
+            <a href="https://github.com/AbdulMoiz34"><i class="fab fa-github"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/abdulmoiz34/"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
-      </footer>
-    </div>
+        <div class="footer-contact pb-5 flex-column flex-sm-row">
+          <div class="text-center text-sm-start">
+            <div class="heading">Contact Us</div>
+            <div>
+              <div>
+                <span>Email:</span>
+                <a href="mailto:" class="text-decoration-none">info@positivus.com</a>
+              </div>
+              <div class="my-2">
+                <span>Phone:</span><a href="tel:+" class="text-decoration-none">555-567-8901</a>
+              </div>
+              <div>
+                <span>Address: </span>
+                <address>1234 Main St
+                  Moonstone City, Stardust State 12345</address>
+              </div>
+            </div>
+          </div>
+          <div class="footer-form">
+            <div data-mdb-input-init class="form-outline mb-4">
+              <input type="email" id="form4Example2" required class="form-control p-2 custom-inp" />
+              <label class="form-label" for="form4Example2">Email address <span class="text-danger">*</span></label>
+            </div>
+            <button>Subscribe to news</button>
+          </div>
+        </div>
+        <div class="d-flex gap-3 flex-sm-row flex-column align-items-center">
+          <div>© 2024 Abdul Moiz, Assignment Task.</div>
+          <a href="">Privacy Policy</a>
+        </div>
+      </div>
+    </footer>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
