--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <nav class="d-none d-lg-block">
           <div class="d-flex column-gap-4">
             <a href="" class="text-decoration-none text-black">About us</a>
-            <a href="" class="text-decoration-none text-black">Services</a>
+            <a href="#services" class="text-decoration-none text-black">Services</a>
             <a href="" class="text-decoration-none text-black" aria-label="use cases">Usecases</a>
-            <a href="" class="text-decoration-none text-black">Pricing</a>
+            <a href="#contactUs" class="text-decoration-none text-black">contact us</a>
             <a href="" class="text-decoration-none text-black">Blog</a>
           </div>
         </nav>
@@ -39,24 +39,24 @@
             Request a quote
           </button>
         </div>
-        <button class="border-0 bg-transparent d-block d-lg-none">
+        <button aria-label="open navbar" class="border-0 bg-transparent d-block d-lg-none">
           <i class="fa-solid fs-1 fa-bars"></i>
         </button>
       </header>
       <section class="hero-section row flex-md-row flex-column-reverse">
         <div class="col-12 col-md-6 d-flex align-items-center">
           <div class="d-flex d-sm-block flex-column align-items-center text-md-start text-center">
-            <h1 class="">
+            <h1 class="hero-head">
               Navigating the <br />
               digital landscape <br />
               for success
             </h1>
-            <p class="w-sm-75">
+            <p class="w-sm-75 hero-para">
               Our digital marketing agency helps businesses grow and succeed
               online through a range of services including SEO, PPC, social
               media marketing, and content creation.
             </p>
-            <button class="primary-btn">Book a consultation</button>
+            <button class="hero-btn primary-btn">Book a consultation</button>
           </div>
         </div>
         <div class="col-md-6 col-12 d-flex justify-content-sm-end align-items-start">
@@ -85,12 +85,12 @@
           </div>
         </div>
       </div>
-      <section class="services">
+      <section class="services" id="services">
         <div class="d-flex align-items-center gap-4 flex-column flex-md-row my-5">
           <h2 class="primary-heading px-4 py-2 px-md-2 rounded shadow-lg">
             Services
           </h2>
-          <p class="w-md-50 text-center text-md-start">
+          <p class="w-md-50 text-center text-md-start primary-para">
             At our digital marketing agency, we offer a range of services to
             help businesses grow and succeed online. These services include:
           </p>
@@ -209,7 +209,7 @@
         </div>
       </section>
 
-      <section class="contact-us">
+      <section class="contact-us" id="contactUs">
         <div class="d-flex align-items-center gap-4 flex-column flex-md-row my-5">
           <h2 class="primary-heading px-4 py-2 px-md-2 rounded shadow-lg">
             Contact Us
@@ -228,7 +228,7 @@
               </label>
               <label>
                 <input type="radio" name="form-type">
-                <span>Get a Quote</span>
+                <span class="hover-shadow">Get a Quote</span>
               </label>
             </div>
             <div class="d-flex justify-content-center d-md-block">
@@ -266,9 +266,9 @@
           </div>
           <div class="d-flex flex-column text-center flex-sm-row gap-3">
             <a href="" class="fs-5">About us</a>
-            <a href="" class="fs-5">Services</a>
+            <a href="#services" class="fs-5">Services</a>
             <a href="" class="fs-5">Use Cases</a>
-            <a href="" class="fs-5">Pricing</a>
+            <a href="#contactUs" class="fs-5">contact us</a>
             <a href="" class="fs-5">Blog</a>
           </div>
           <div class="d-flex gap-3 align-items-center">
@@ -296,8 +296,8 @@
             </div>
           </div>
           <div class="footer-form">
-            <div data-mdb-input-init class="form-outline mb-4">
-              <input type="email" id="form4Example2" required class="form-control p-2 custom-inp" />
+            <div data-mdb-input-init class="form-outline">
+              <input type="email" id="form4Example2" required class=" form-control p-2 custom-inp" />
               <label class="form-label" for="form4Example2">Email address <span class="text-danger">*</span></label>
             </div>
             <button>Subscribe to news</button>
@@ -312,9 +312,13 @@
   </main>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./app.js"></script>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.umd.min.js"></script>
+  <!-- GSAP -->
+
+  <script src="./gsap-public/minified/gsap.min.js"></script>
+  <script src="./gsap-public/minified/ScrollTrigger.min.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
