--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <a href="#services" class="text-decoration-none text-black">Services</a>
             <a href="" class="text-decoration-none text-black" aria-label="use cases">Usecases</a>
             <a href="#contactUs" class="text-decoration-none text-black">contact us</a>
-            <a href="" class="text-decoration-none text-black">Blog</a>
+            <a href="#process-work" class="text-decoration-none text-black">Our work</a>
           </div>
         </nav>
         <div class="d-none d-lg-block">
-          <button class="bg-transparent border border-black rounded px-3 py-2">
+          <button class="header-req-btn bg-transparent border border-black rounded px-3 py-2">
             Request a quote
           </button>
         </div>
@@ -104,7 +104,7 @@
               </div>
               <img src="./assets/servicesImg/bicycle.svg" alt="" />
               <a href="">
-                <i class="fa-solid fa-arrow-right"></i>
+                <i class="fa-solid fa-arrow-right service-links-arrow-icon"></i>
                 <span>Learn more</span>
               </a>
             </div>
@@ -117,24 +117,50 @@
               </div>
               <img src="./assets/servicesImg/box2.svg" alt="" />
               <a href="">
-                <i class="fa-solid fa-arrow-right"></i>
+                <i class="fa-solid fa-arrow-right service-links-arrow-icon"></i>
+                <span>Learn more</span>
+              </a>
+            </div>
+          </div>
+          <div class="service-cols">
+            <div class="service-cols-inner">
+              <div class="d-flex flex-column align-items-start">
+                <h3 class="bg-white p-1 px-2 m-0">E-mail</h3>
+                <h3 class="bg-white p-1 px-2 m-0">Marketing</h3>
+              </div>
+              <img src="./assets/servicesImg/box2.svg" alt="" />
+              <a href="">
+                <i class="fa-solid fa-arrow-right service-links-arrow-icon"></i>
+                <span>Learn more</span>
+              </a>
+            </div>
+          </div>
+          <div class="service-cols">
+            <div class="service-cols-inner">
+              <div class="d-flex flex-column align-items-start">
+                <h3 class="p-1 px-2 m-0">Social Media </h3>
+                <h3 class="p-1 px-2 m-0">Marketing</h3>
+              </div>
+              <img src="./assets/servicesImg/box2.svg" alt="" />
+              <a href="">
+                <i class="fa-solid fa-arrow-right service-links-arrow-icon"></i>
                 <span>Learn more</span>
               </a>
             </div>
           </div>
         </div>
       </section>
-      <section class="process mb-5">
+      <section class="process mb-5" id="process-work">
         <div class="d-flex align-items-center gap-4 flex-column flex-md-row my-5">
           <h2 class="primary-heading px-4 py-2 px-md-2 rounded shadow-lg">
             Our Working Process
           </h2>
-          <p class="w-md-50 text-center text-md-start">
+          <p class="primary-para w-md-50 text-center text-md-start">
             Step-by-Step Guide to Achieving Your Business Goals
           </p>
         </div>
         <div class="my-accordion">
-          <div class="my-accordion-item">
+          <div class="my-accordion-item right">
             <div class="d-flex justify-content-between">
               <div class="d-flex gap-3">
                 <span class="fw-bold fs-1">01</span>
@@ -153,7 +179,7 @@
               </p>
             </div>
           </div>
-          <div class="my-accordion-item">
+          <div class="my-accordion-item left">
             <div class="d-flex justify-content-between">
               <div class="d-flex gap-3">
                 <span class="fw-bold fs-1">02</span>
@@ -170,7 +196,7 @@
               </p>
             </div>
           </div>
-          <div class="my-accordion-item">
+          <div class="my-accordion-item right">
             <div class="d-flex justify-content-between">
               <div class="d-flex gap-3">
                 <span class="fw-bold fs-1">03</span>
@@ -189,7 +215,7 @@
               </p>
             </div>
           </div>
-          <div class="my-accordion-item">
+          <div class="my-accordion-item left">
             <div class="d-flex justify-content-between">
               <div class="d-flex gap-3">
                 <span class="fw-bold fs-1">04</span>
@@ -251,7 +277,7 @@
                   <label class="form-label" for="form4Example3">Message <span class="text-danger">*</span></label>
                 </div>
                 <!-- Submit button -->
-                <button class="primary-btn w-100">Send</button>
+                <button class="primary-btn w-100 contact-form-btn">Send</button>
               </form>
             </div>
           </div>
@@ -272,7 +298,7 @@
             <a href="" class="fs-5">Blog</a>
           </div>
           <div class="d-flex gap-3 align-items-center">
-            <a href="https://github.com/AbdulMoiz34"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/AbdulMoiz34" target="_blank"><i class="fab fa-github"></i></a>
             <a href=""><i class="fab fa-facebook"></i></a>
             <a href="https://www.linkedin.com/in/abdulmoiz34/"><i class="fab fa-linkedin"></i></a>
           </div>
