--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <span class="fw-bold fs-1">01</span>
                 <span class="fs-4 ">Consultation</span>
               </div>
-              <button class="bg-transparent my-accordian-toggle-btn">
+              <button class="bg-transparent my-accordion-toggle-btn">
                 <i class="fa-solid fa-plus icon"></i>
               </button>
             </div>
