--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <span class="fw-bold fs-1">02</span>
                 <span class="fs-4 ">Research and Strategy Development</span>
               </div>
-              <button class="bg-transparent my-accordian-toggle-btn">
+              <button class="bg-transparent my-accordion-toggle-btn">
                 <i class="fa-solid fa-plus icon"></i>
               </button>
             </div>
@@ -205,7 +205,7 @@
                 <span class="fw-bold fs-1">03</span>
                 <span class="fs-4 ">Implementation</span>
               </div>
-              <button class="bg-transparent my-accordian-toggle-btn">
+              <button class="bg-transparent my-accordion-toggle-btn">
                 <i class="fa-solid fa-plus icon"></i>
               </button>
             </div>
@@ -224,7 +224,7 @@
                 <span class="fw-bold fs-1">04</span>
                 <span class="fs-4 ">Monitoring and Optimization</span>
               </div>
-              <button class="bg-transparent my-accordian-toggle-btn">
+              <button class="bg-transparent my-accordion-toggle-btn">
                 <i class="fa-solid fa-plus icon"></i>
               </button>
             </div>
